# svalboard_layout_optimizer

./: .gitignore  README.md  Taskfile.yml  per_total_layouts.txt
config/evaluation/: sval.yml
config/keyboard/: sval.yml
keyboard_layout/: Cargo.toml
keyboard_layout_optimizer/: Cargo.toml
keyboard_layout_optimizer/src/: common.rs
layout_evaluation/: Cargo.toml
layout_evaluation/src/: evaluation.rs  metrics.rs
layout_evaluation/src/metrics/: bigram_metrics.rs  format_utils.rs  trigram_metrics.rs  unigram_metrics.rs
layout_evaluation/src/metrics/bigram_metrics/: bigram_stats.rs  cluster_rolls.rs  fsb.rs  hsb.rs  scissor_base.rs  scissors.rs  sfb.rs
layout_evaluation/src/metrics/trigram_metrics/: redirect_base.rs  redirects.rs  sfs.rs  trigram_stats.rs  weak_redirect.rs
layout_evaluation/src/metrics/unigram_metrics/: character_constraints.rs
layout_optimization/layout_optimization_common/: Cargo.toml
layout_optimization/layout_optimization_genetic/: Cargo.toml
layout_optimization/layout_optimization_sa/: Cargo.toml
layout_optimization/layout_optimization_sa/src/: optimization.rs
ngrams/eng_fra/: 1-grams.txt  2-grams.txt
ngrams/eng_reddit_small/: 1-grams.txt  2-grams.txt  3-grams.txt
ngrams/fra_leipzig/: 1-grams.txt  2-grams.txt  3-grams.txt
ngrams/fra_news/: 1-grams.txt  2-grams.txt  3-grams.txt
ngrams/fra_web/: 1-grams.txt  2-grams.txt  3-grams.txt
ngrams/fra_wikipedia/: 1-grams.txt  2-grams.txt  3-grams.txt
ngrams/per_total/: 1-grams.txt  2-grams.txt  3-grams.txt
scripts/: parse_results.py
scripts/corpora/: README.md  Taskfile.yml  pyproject.toml
scripts/corpora/corpora_builder/: __init__.py  clean_french_corpus.py  clean_reddit_corpus.py  corpus_cleaner.py  extract_convokit.py
scripts/ngrams/: filter_impossible_ngrams.py  normalize.py
scripts/report/: README.md  pyproject.toml  report.py
