[package]
authors = ["Dario Götz <dario.goetz@googlemail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
name = "layout_evaluation"
rust-version = "1.60"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyboard_layout = { path = "../keyboard_layout" }

ahash = { version = "0.8.12", features = ["serde"] }
anyhow = "1.0.100"
colored = "2.0.2"
csv = "1.2"
env_logger = "0.10.2"
itertools = "0.13.0"
log = "0.4.27"
ordered-float = "4.6.0"
parking_lot = "0.12.3"
priority-queue = "2.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.21"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
harness = false
name = "evaluate"
